feat: docker images

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,7 @@
     name="keywords"
     content="cmms, admin dashboard,eam, atlas, atlas cmms"
   />
+  <script src="%PUBLIC_URL%/runtime-env.js"></script>
 </head>
 
 <body>
